修改web导航样式

--- a/src/app/layout/erupt/sidebar/sidebar.component.html
+++ b/src/app/layout/erupt/sidebar/sidebar.component.html
@@ -1,6 +1,10 @@
 <div class="alain-default__aside-wrap">
     <div class="alain-default__aside-inner" style="overflow: scroll">
+
+        <!-- 立样菜单 -->
         <erupt-menu [autoCloseUnderPad]="true" class="d-block" style="padding-top: 0 !important;padding-bottom:38px;"></erupt-menu>
+
+        <!--切换最小化和还原按钮-->
         <div class="fold" (click)="toggleCollapsedSidebar()" style="height: 38px">
             <i nz-icon nzType="menu-{{settings.layout.collapsed ? 'unfold' : 'fold'}}" style="font-size: 1.2em"></i>
         </div>
