--- a/src/app/layout/erupt/erupt.component.html
+++ b/src/app/layout/erupt/erupt.component.html
@@ -5,9 +5,23 @@
                    [menu]="menu"></layout-header>
     <layout-sidebar class="erupt-side alain-default__aside"></layout-sidebar>
     <section class="erupt_content">
+
+
+        <!-- menu breadcrumbs -->
+        <div class="hidden-mobile erupt_content_nav" *ngIf="settings.layout['breadcrumbs']">
+            <div class="alain-default__nav-item" style="padding:0 10px 0 18px">
+                <erupt-nav></erupt-nav>
+            </div>
+        </div>
+
+        <!-- tabs -->
         <reuse-tab *ngIf="settingSrv.layout['reuse']" [max]="30" tabType="card" [tabBarGutter]="0"
-                   [tabMaxWidth]="180"></reuse-tab>
+                   [tabMaxWidth]="180">
+
+        </reuse-tab>
+
         <router-outlet></router-outlet>
+
     </section>
 </nz-water-mark>
 <theme-btn [devTips]="null" [types]="themes"></theme-btn>
