--- a/src/app/layout/erupt/erupt.component.less
+++ b/src/app/layout/erupt/erupt.component.less
@@ -3,17 +3,22 @@
     @header-h: 44px;
 
     .alain-default__aside {
-        min-height: calc(100vh - 44px);
+        min-height: calc(100vh - @header-h);
     }
 
     .erupt_content {
         transition: all 300ms;
     }
 
+    .erupt_content_nav {
+        position: fixed;
+        top: 88px;
+    }
+
     @media (min-width: 768px) {
         .alain-default__fixed .reuse-tab + router-outlet {
             display: block;
-            height: 38px !important;
+            height: 55px !important;
         }
     }
 
@@ -72,6 +77,8 @@
 
 
 :host {
+    @header-h: 44px;
+
     .erupt-header {
         position: absolute;
         top: 0;
@@ -81,7 +88,7 @@
         display: flex;
         align-items: center;
         width: 100%;
-        height: 44px;
+        height: @header-h;
         padding: 0 16px;
         background: #fff;
         border-bottom: 1px solid #e5e5e5;
