--- a/src/app/layout/erupt/header/header.component.html
+++ b/src/app/layout/erupt/header/header.component.html
@@ -13,11 +13,30 @@
                 <i nz-icon nzType="menu-{{settings.layout.collapsed ? 'unfold' : 'fold'}}"></i>
             </div>
         </li>
-        <div class="hidden-mobile" *ngIf="settings.layout['breadcrumbs']">
+
+
+        <ul class="sidebar-nav">
+            <ng-container *ngIf="loading">
+                <nz-skeleton [nzParagraph]="{ rows: 12 }" [nzTitle]="false" [nzActive]="true" style="padding: 12px"></nz-skeleton>
+            </ng-container>
+            <ng-container *ngIf="!loading">
+                <ng-container *ngFor="let group of list">
+                    <li class="sidebar-nav__item sidebar-nav__group-title" *ngIf="group.group">
+                        <span [innerHTML]="group._text"></span>
+                    </li>
+                </ng-container>
+            </ng-container>
+        </ul>
+
+        <!-- menu breadcrumbs -->
+        <!-- 不在header中显示菜单路径 -->
+        <!--<div class="hidden-mobile" *ngIf="settings.layout['breadcrumbs']">
             <div class="alain-default__nav-item" style="padding:0 10px 0 18px">
                 <erupt-nav></erupt-nav>
             </div>
         </div>
+        -->
+
         <li *ngIf="desc">
             <span nz-icon nzType="question-circle" nzTheme="outline" nz-tooltip [nzTooltipTitle]="descTpl">
             </span>
@@ -30,7 +49,8 @@
     </ul>
 
     <ul class="alain-default__nav">
-        <ng-container *ngFor="let r of r_tools">
+        <!-- 工具按钮 -->
+        <ng-container *ngFor="let r of r_tools" >
             <li (click)="customToolsFun($event,r)" [ngClass]="r.mobileHidden?'hidden-mobile':''">
                 <div class="alain-default__nav-item" [title]="r.text">
                     <i class="fa {{r.icon}}"></i>
