顶部一级导航功能实现

--- a/src/app/layout/erupt/header/header.component.less
+++ b/src/app/layout/erupt/header/header.component.less
@@ -51,6 +51,13 @@
                 }
             }
         }
+
+        .header__nav-item {
+            color: #0472ee !important;
+            padding: 0px 0px 0px 40px;
+            font-size: large;
+            font-weight: bold;
+        }
     }
 }
 
