--- a/src/app/layout/erupt/header/header.component.html
+++ b/src/app/layout/erupt/header/header.component.html
@@ -14,19 +14,19 @@
             </div>
         </li>
 
-
-        <ul class="sidebar-nav">
-            <ng-container *ngIf="loading">
-                <nz-skeleton [nzParagraph]="{ rows: 12 }" [nzTitle]="false" [nzActive]="true" style="padding: 12px"></nz-skeleton>
-            </ng-container>
-            <ng-container *ngIf="!loading">
-                <ng-container *ngFor="let group of list">
-                    <li class="sidebar-nav__item sidebar-nav__group-title" *ngIf="group.group">
-                        <span [innerHTML]="group._text"></span>
+        <!-- 顶部一级导航 -->
+        <ng-container *ngIf="list[0]" >
+            <ng-container *ngFor="let group of list[0].children">
+                <a (click)="toModule(group)"
+                   [ngClass]="{ 'sidebar-nav__item-disabled': group['_hidden'] }"
+                >
+                    <li class="alain-default__nav-item header__nav-item" *ngIf="group.group">
+                        <span [innerHTML]="group.text"></span>
                     </li>
-                </ng-container>
+                </a>
             </ng-container>
-        </ul>
+        </ng-container>
+
 
         <!-- menu breadcrumbs -->
         <!-- 不在header中显示菜单路径 -->
@@ -50,7 +50,7 @@
 
     <ul class="alain-default__nav">
         <!-- 工具按钮 -->
-        <ng-container *ngFor="let r of r_tools" >
+        <ng-container *ngFor="let r of r_tools">
             <li (click)="customToolsFun($event,r)" [ngClass]="r.mobileHidden?'hidden-mobile':''">
                 <div class="alain-default__nav-item" [title]="r.text">
                     <i class="fa {{r.icon}}"></i>
