--- a/src/app/layout/erupt/header/header.component.less
+++ b/src/app/layout/erupt/header/header.component.less
@@ -55,8 +55,9 @@
         .header__nav-item {
             color: #0472ee !important;
             padding: 0px 0px 0px 40px;
-            font-size: large;
+            font-size: medium;
             font-weight: bold;
+            min-width: 110px;
         }
     }
 }
