--- a/src/app/layout/erupt/header/header.component.less
+++ b/src/app/layout/erupt/header/header.component.less
@@ -53,7 +53,7 @@
         }
 
         .header__nav-item {
-            color: #0472ee !important;
+            color: #010811 !important;
             padding: 0px 0px 0px 40px;
             font-size: medium;
             font-weight: bold;
