--- a/src/app/layout/erupt/header/header.component.less
+++ b/src/app/layout/erupt/header/header.component.less
@@ -54,10 +54,10 @@
 
         .header__nav-item {
             color: #010811 !important;
-            padding: 0px 0px 0px 40px;
-            font-size: medium;
-            font-weight: bold;
-            min-width: 110px;
+            padding: 0px 0px 0px 0px;
+            font-size: small;
+            font-weight: 600;
+            min-width: 120px;
         }
     }
 }
